--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     </style>
 
     <main>
-      <section>
-        <div id="first">1</div>
-        <div id="second">2</div>
-        <div id="third">3</div>
-        <div id="fourth">4</div>
-        <div id="fifth">5</div>
-        <div id="sixth">6</div>
-        <div id="seventh">7</div>
-        <div id="eight">8</div>
-        <div id="nineth">9</div>
+      <section class = "grid-container">
+        <div class="item1">1</div>
+        <div class="item2">2</div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">5</div>
+        <div class="item6">6</div>
+        <div class="item7">7</div>
+        <div class="item8">8</div>
+        <div class="item9">9</div>
       </section>
     </main>
 <footer>
 </footer>
 </body>
 </html>
+
